Inital problems page will be used to add and generate problems
